# test-cinnamon

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg  tasks.py
app/api/: Dockerfile  celery_client.py  main.py  pyproject.toml  requirements.txt  settings.py
app/api/enums/: operation_type.py  task_name.py  worker_queue.py
app/api/exceptions/: exceptions.py
app/api/handlers/file/: base_file_handler.py  factory.py  image_handler.py  pdf_handler.py
app/api/models/: file.py
app/api/payload/: file.py
app/api/repos/: file.py
app/api/routers/: files.py  operations.py  tasks.py
app/api/schemas/: file.py
app/api/services/: file.py
app/api/utils/: ast_utils.py  file.py
app/logger/: logger.py
app/shared/: fs_client.py  settings.py
app/shared/db/: database.py  session.py
app/shared/enums/: bucket.py  celery_task_status.py  file_extension.py  folder.py  operation_type.py  task_error.py  task_name.py  task_status.py  worker_queue.py
app/shared/logger/: logger-config.yaml  logger.py
app/shared/models/: task.py
app/shared/payload/: infer.py  task.py
app/shared/repos/: task.py
app/shared/services/: ocr.py  storage.py  task.py
app/worker/: Dockerfile  base_retry_task.py  celery_consumer.py  pyproject.toml  requirements.txt  settings.py
